--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
 .site_container {
     padding-top: 60px;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+}
+
+@media (max-width: 767px) { /*when screen gets small update margins*/
+    .site_container {
+        padding-top: 60px;
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+}
+
+@media (max-width: 479px) { /*when screen gets x-small update margins*/
+    .site_container {
+        padding-top: 60px;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+    }
 }
 
 .spinner-center {
