--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     padding-top: 60px;
     margin-left: 12.5%;
     margin-right: 12.5%;
+    padding-bottom: 20px;
 }
 
 @media (max-width: 767px) { /*when screen gets medium update margins*/
@@ -24,4 +25,9 @@
     position:fixed;
     left: 50%;
     top: 50%;
+}
+
+.badge {
+    margin-left: 5px;
+    margin-right: 5px;
 }
