--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+/* html, body { margin: 0; padding: 0; background-color: black;}  */
+
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
+.root_container {
+    background-color: black;
+    min-height: 100vh;
+    height: 100%;
+}
+
 .site_container {
     padding-top: 60px;
     margin-left: 12.5%;
@@ -30,4 +43,16 @@
 .badge {
     margin-left: 5px;
     margin-right: 5px;
+}
+
+.dark_bg {
+    background-color: #404040;
+}
+
+.dark_text {
+    background-color: #fafbfc;
+}
+
+.dark_mode_toggler {
+    padding-top: 5px;
 }
